edited the css to resolve the contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -45,7 +45,7 @@ main {
 }
 
 h1 {
-    color: black;
+    color: white;
     margin: 0;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -75,14 +75,14 @@ nav {
 }
 
 nav a:hover {
-    color: black;
+    color: white;
     border-radius: 5px;
 }
 
 nav a {
     text-decoration: none;
-    color: black;
-    font-size: 20px;
+    color: yellow;
+    font-size: 30px;
     transition: border-color 0.3s ease;
     display: flex;
     align-items: center;
@@ -114,6 +114,7 @@ footer {
     background-color: rgb(63, 102, 52);
     font-style: normal;
     font-family: Roboto;
+    color: antiquewhite;
     align-self: end;
 }
 
@@ -134,13 +135,13 @@ footer {
 }
 
 .card-events {
-    background-color: gray;
+    background-color: lightgreen;
     padding: 40px;
     grid-column: 1/2;
 }
 
 .card-weather {
-    background-color: gray;
+    background-color: lightgreen;
     padding: 40px;
     grid-column: 3/4;
 
@@ -153,21 +154,21 @@ footer {
 
 
 .card-advertisements ul li:first-child {
-    background-color: gray;
+    background-color: lightgreen;
     padding: 40px;
     text-align: center;
     grid-column: 1/2;
 }
 
 .card-advertisements ul li:nth-child(2) {
-    background-color: gray;
+    background-color: lightgreen;
     padding: 40px;
     text-align: center;
     grid-column: 2/3;
 }
 
 .card-advertisements ul li:nth-child(3) {
-    background-color: gray;
+    background-color: lightgreen;
     padding: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -193,6 +194,11 @@ footer {
     flex-direction: right;
 }
 
+h4 {
+    text-align: left;
+
+}
+
 iframe {
     grid-column: 1/3;
     justify-self: center;
@@ -210,4 +216,10 @@ iframe {
     color: #000;
     font-size: 10px;
     text-decoration: none;
+}
+
+#lastUpdated {
+    background-color: antiquewhite;
+    color: #333;
+    font-style: normal;
 }
